--- a/tasks/reverse_proxy.yml
+++ b/tasks/reverse_proxy.yml
@@ -18,7 +18,7 @@
 - name: Copy nginx block (vhost) config file to available sites
   template:
     src: "{{ item }}.j2"
-    dest: "{{ nginx_conf_dir }}/sites-available/{{ nextcloud_fqdn }}.conf"
+    dest: "/etc/nginx/sites-available/{{ nextcloud_fqdn }}.conf"
   with_items:
     - nginx.conf
   notify: "reload nginx"
@@ -26,8 +26,8 @@
 
 - name: Enable nginx block config
   file:
-    src: "{{ nginx_conf_dir }}/sites-available/{{ nextcloud_fqdn }}.conf"
-    dest: "{{ nginx_conf_dir }}/sites-enabled/{{ nextcloud_fqdn }}.conf"
+    src: "/etc/nginx/sites-available/{{ nextcloud_fqdn }}.conf"
+    dest: "/etc/nginx/sites-enabled/{{ nextcloud_fqdn }}.conf"
     state: link
   notify: "reload nginx"
   become: yes
