--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,5 @@
 ---
+stage: "production"
 # main
 nextcloud_version: "17.0.6"
 nextcloud_state: "started"
@@ -16,6 +17,7 @@ nextcloud_admin_password: "{{ vault_nextcloud_admin_password }}"
 nextcloud_allow_user_to_change_display_name: "true"
 nextcloud_force_rebuild: false
 nextcloud_docker_ip: 172.17.0.1
+nextcloud_nginx_ip: "{{ ansible_default_ipv4.address }}"
 
 # paths
 nextcloud_docker_base_dir: "/opt/docker"
