--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
 - import_tasks: configure_install.yml
 - import_tasks: db_setup.yml
+  delegate_to: "{{ nextcloud_database_hostname }}"
 - import_tasks: mount_storage.yml
   when: nextcloud_mount_enable
 - import_tasks: install_nextcloud.yml
@@ -8,5 +9,6 @@
 - import_tasks: configure_ldap.yml
   when: nextcloud_ldap_enable
 - import_tasks: reverse_proxy.yml
+  delegate_to: "{{ nextcloud_reverse_proxy_hostname }}"
 - import_tasks: anonymize_ips.yml
 - meta: flush_handlers
