--- a/tasks/install_nextcloud.yml
+++ b/tasks/install_nextcloud.yml
@@ -26,7 +26,7 @@
       restart: "{{ nextcloud_register_config.changed }}"
       restart_policy: "{{ nextcloud_restart_policy }}"
       ports:
-        - "{{ nextcloud_docker_bind_ip }}:{{ nextcloud_port }}:80"
+        - "{{ nextcloud_private_ipv4 }}:{{ nextcloud_port }}:80"
       links:
         - "redis:redis"
       networks:
@@ -60,7 +60,7 @@
       restart: "{{ nextcloud_register_config.changed }}"
       restart_policy: "{{ nextcloud_restart_policy }}"
       ports:
-        - "{{ nextcloud_docker_bind_ip }}:{{ nextcloud_port }}:80"
+        - "{{ nextcloud_private_ipv4 }}:{{ nextcloud_port }}:80"
       links:
         - "redis:redis"
       volumes:
