--- a/vars/ldap.yml
+++ b/vars/ldap.yml
@@ -28,7 +28,7 @@ nextcloud_ldap_config:
   # ldapGroupFilterMode: 0
   # ldapGroupFilterObjectclass: "groupOfUniqueNames"
   ldapGroupMemberAssocAttr: "uniqueMember"
-  ldapHost: "{{ nextcloud_ldap_private_ipv4 }}"
+  ldapHost: "{{ nextcloud_ldap_host }}"
   ldapPort: "{{ nextcloud_ldap_port }}"
   # ldapIgnoreNamingRules: ""
   ldapLoginFilter: "(&(objectClass=inetOrgPerson)(memberOf=cn=nextcloud,ou=services,{{ nextcloud_ldap_basedn }})(|(uid=%uid)(cn=%uid)(mail=%uid)(entryUUID=%uid)))"
