--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,10 +4,11 @@
   delegate_to: "{{ nextcloud_database_hostname }}"
 - import_tasks: mount_storage.yml
   when: nextcloud_mount_enable
+- import_tasks: reverse_proxy.yml
+  delegate_to: "{{ nextcloud_reverse_proxy_hostname }}"
 - import_tasks: install_nextcloud.yml
 - import_tasks: nextcloud_apps.yml
 - import_tasks: configure_ldap.yml
   when: nextcloud_ldap_enable
-- import_tasks: reverse_proxy.yml
 - import_tasks: anonymize_ips.yml
 - meta: flush_handlers
