--- a/tasks/db_setup.yml
+++ b/tasks/db_setup.yml
@@ -5,6 +5,7 @@
     collation: "utf8mb4_general_ci"
     encoding: "utf8mb4"
     state: present
+    login_unix_socket: /var/run/mysqld/mysqld.sock
 
 - name: Add Nextcloud MariaDB user account
   mysql_user:
@@ -14,6 +15,7 @@
     append_privs: True
     host: "{{ item.host }}"
     state: "present"
+    login_unix_socket: /var/run/mysqld/mysqld.sock
   with_items:
     - host: localhost
     - host: "%"
